--- a/Weatherbet/app/views/locations/index.html.erb
+++ b/Weatherbet/app/views/locations/index.html.erb
@@ -2,39 +2,93 @@
 
 <h1>Locations</h1>
 
-<table>
+
+<% usrLoc = (params[:usrLoc] ? params[:usrLoc] : current_user ? current_user.reports.first.location : "Bear Hill Preserve") %> 
+
+<% forcastStart = (params[:forcastDate] ? DateTime.parse(params[:forcastDate]) : DateTime.now)  %>
+
+<% #usrLoc = Location.getCoords(usrLoc) %>
+<% unless usrLoc.class == Location.new.class %>
+  <% name = usrLoc %>
+  <% gp1 = Location.getCoords(usrLoc) %>
+  <% usrLoc = Location.new %>
+  <% usrLoc.lat = gp1["lat"] %>
+  <% usrLoc.lng = gp1["lng"] %>
+  <% usrLoc.name = name %>
+<% end %>
+
+<p> <!-- begin forcast table -->
+<table style="border-collapse: separate; border-spacing: 15px 1px;">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th>Lattitude</th>
+      <th>Longitude</th>
+      <th>Distance</th>
+      <% (0...5).each do |n| %>
+        <th style="text-align: center;"><%= "+#{n}" %></th>
+      <% end %>
+      <th> days </th>
+      <!-- <th colspan="5">Flyability Forcast</th> -->
+      <!-- <th colspan="1"></th> -->
     </tr>
   </thead>
 
+
+
+
   <tbody>
-    <% @locations.each do |location| %>
+    <% @locsByDist = @locations.sort_by { |loc| Location.distance(loc.lat, loc.lng, usrLoc.lat, usrLoc.lng ) } %>
+    <% @locsByDist.each do |location| %>
       <tr>
         <td><%= location.name %></td>
+        <td><%= location.lat.round(2) %></td>
+        <td><%= location.lng.round(2) %></td>
+        <td><%= Location.distance(location.lat, location.lng, usrLoc.lat, usrLoc.lng ).round(2) %></td>
+        <% (0...5).each do |i| %>
+          <% score = location.getAPWn(forcastStart+i.days) %>
+          
+          <td style='padding: 2px; padding-right: 5px; background-color: rgb(<%= (255-255*score).round %>, <%= score<0.5 ? 255 : (255*score).round %>, <%= (255-255*score).round %>);' >
+            | <%= '%2.2f' % score %> |
+          </td>
+        <% end %>
         <td><%= link_to 'Show', location %></td>
-        <td><%= link_to 'Edit', edit_location_path(location) %></td>
-        <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+</p> <!-- end forcast table -->
 
-<br>
 
-<%= link_to 'New Location', new_location_path %>
 
-<br>
-<br>
 <p>
-<p><strong>the distance from brooklyn to bali is </strong>
-<% c1 = Location.getCoords("brookln") %>
-<% c2 = Location.getCoords("bali") %>
-<%= Location.distance(c1["lat"], c1["lng"], c2["lat"], c2["lng"]) %> km
-</p>
+
+<%= form_tag(locations_path, method: :get) do %>
+<table>
+  <tr><td>I am in:</td><td><%= text_field_tag :usrLoc, params[:usrLoc], :value => usrLoc.name %></td></tr>
+  <tr><td>I would like the forcast starting:</td><td><%= date_field_tag :forcastDate, params[:forcastDate], :value => forcastStart.strftime('%Y-%m-%d') %></td></tr>
+</table>
+<%= submit_tag "Search" %>
+<% end %>
+
+
+
+
+  <p>
+  You are in <%= "#{usrLoc.name}. Your coordinates are lattitude #{usrLoc.lat} and longitude #{usrLoc.lng}. Here is the prediction based for the next five days starting on #{forcastStart.strftime('%B, %d %Y')}" %> <br>
+  <%= content_tag :iframe, "NO FRAMES", src: Location.getMapURI(usrLoc.lat, usrLoc.lng, 15), id: "mapFrame" %>
+
+  </p>
+
+
+
 <br>
+
+
+
+
+
+
 
 <p>
 <p>
@@ -61,64 +115,29 @@
 
 
 
-<%= form_tag(locations_path, method: :get) do %>
 <table>
-  <tr><td>I am in:</td><td><%= text_field_tag :usrLoc, params[:usrLoc] %></td></tr>
-  <tr><td>I would like the forcast starting:</td><td><%= date_field_tag :forcastDate, params[:forcastDate] %></td></tr>
-</table>
-<%= submit_tag "Search" %>
-<% end %>
-
-<% if params[:usrLoc] #dont do anything unless there is a request %>
-    <% usrLoc = params[:usrLoc] %>
-    <% gps = Location.getCoords(usrLoc) %>
-
-  <p>
-  You are in <%= "#{usrLoc}. Your coordinates are lattitude #{gps['lat']} and longitude #{gps['lng']}" %> <br>
-  <%= content_tag :iframe, "NO FRAMES", src: Location.getMapURI(gps['lat'], gps['lng'], 15) %>
-
-  </p>
-
-
-
-<p>
-<table >
   <thead>
     <tr>
       <th>Name</th>
-      <th>Lattitude</th>
-      <th>Longitude</th>
-      <th>Distance</th>
-      <th colspan="5">Flyability Forcast</th>
-      <!-- <th colspan="1"></th> -->
+      <th colspan="3"></th>
     </tr>
   </thead>
 
-  <% forcastStart = (params[:forcastDate]? DateTime.parse(params[:forcastDate]) : DateTime.now)  %>
-
-
   <tbody>
-    <% @locsByDist = @locations.sort_by { |loc| Location.distance(loc.lat, loc.lng, gps['lat'], gps['lng'] ) } %>
-    <% @locsByDist.each do |location| %>
+    <% @locations.each do |location| %>
       <tr>
         <td><%= location.name %></td>
-        <td><%= location.lat %></td>
-        <td><%= location.lng %></td>
-        <td><%= Location.distance(location.lat, location.lng, gps['lat'], gps['lng'] ).round(2) %></td>
-        <% (0...5).each do |i| %>
-          <td> | <%= '%2.2f' % location.getAPWn(forcastStart+i.days) %> | </td>
-        <% end %>
         <td><%= link_to 'Show', location %></td>
+        <td><%= link_to 'Edit', edit_location_path(location) %></td>
+        <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-</p>
-
-<% end #if usrLoc %>
 
 <br>
 
+<%= link_to 'New Location', new_location_path %>
 
 
 
