--- a/Weatherbet/app/views/users/show.html.erb
+++ b/Weatherbet/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 <h1><%= current_user.email %></h1>
 
 
@@ -57,7 +55,6 @@ You have made <strong><%= @usrStats.total %></strong> predictions, of which <str
 <% end %>
 </ul>
 </p>
->>>>>>> master
 
 <div class='backgroundJK'>
 <div class='row'>
@@ -80,7 +77,7 @@ You have made <strong><%= @usrStats.total %></strong> predictions, of which <str
     <div class='center'>
     <h1> Prediction Accuracy </h1>
     </div>
-    <p>You have made <strong><%= @predictions.count %></strong> predictions, of which <strong><%= @usrStats.correct %></strong> where correct. </p> 
+    <p>You have made <strong><%= @usrStats.total %></strong> predictions, of which <strong><%= @usrStats.correct %></strong> where correct. </p> 
 
     <p>This implies that the probability of your next prediction being correct is: <br />
 
