--- a/Weatherbet/app/views/users/show.html.erb
+++ b/Weatherbet/app/views/users/show.html.erb
@@ -102,15 +102,19 @@ You have made <strong><%= @usrStats.total %></strong> predictions, of which <str
         <%= prediction.location.name %> 
         <%= prediction.start %> 
         <%= prediction.end %> 
-        <% if prediction.isTrue %>
+        <% if prediction.check %>
+      <strong>√<%= j+=1 %></strong>
       <ul>
-        <li><%= prediction.confirmingReport.location.name %>
-        <%= prediction.confirmingReport.start %>
-        <%= prediction.confirmingReport.end %>
-        <%= (prediction.confirmingReport.user).email %></li>
+          <% prediction.getConfirmingReports.order(:start).find_each do |s| %>
+          <li>
+          <%= s.start %> 
+          <%= s.end %> 
+          <%= s.user.email %> 
+         </li>
+          <% end %>
       </ul>
-        
     <% end %>
+        
      </li>
      <% end %>
      <% else %>
