--- a/Weatherbet/app/views/layouts/application.html.erb
+++ b/Weatherbet/app/views/layouts/application.html.erb
@@ -32,10 +32,10 @@
 		        	<!--<a href="#home">home <span class="sr-only">(current)</span></a>-->
 		        	<%= link_to "home", pages_home_path %>
 		        </li>
-		        <li>
+		        <!-- <li> -->
 		        	<!--<a href="#weather">weather</a>-->
-		        	<%= link_to "weather", pages_weather_path %>
-		        </li>
+		        	<% #link_to "weather", pages_weather_path %>
+		        <!-- </li> -->
 		        <li>
 		        	<!-- <a href='#locations'>locations</a> -->
 		        	<%= link_to "locations", pages_locations_path %>
