--- a/Weatherbet/app/views/locations/index.html.erb
+++ b/Weatherbet/app/views/locations/index.html.erb
@@ -1,8 +1,13 @@
+<div class='background'>
 <p id="notice"><%= notice %></p>
 
-<h1 class='test'>Locations</h1>
-
-
+<div class='row'>
+<div class='col-s-8 col-md-8 col-lg-8'>
+<div class='panel panel-default'>
+<div class='panel-heading'>
+<h1 class='center liner'>Nearby Locations</h1>
+</div>
+<div class='panel-body'>
 
 <% usrLoc = (params[:usrLoc] ? params[:usrLoc] : current_user ? current_user.reports.first.location : "Bear Hill Preserve") %> 
 <% usrLoc  = (usrLoc ? usrLoc : "Bear Hill Preserve") %>
@@ -59,27 +64,49 @@
   </tbody>
 </table>
 </p> <!-- end forcast table -->
+</div>
+</div> 
+</div>
+<div class='col-s-4 col-md-4 col-lg-4'>
+
+<div class='panel panel-default'>
+<%= form_tag(locations_path, method: :get) do %>
+<table>
+  <tr><td><strong>I am in:</strong></td><td><%= text_field_tag :usrLoc, params[:usrLoc], :value => usrLoc.name %></td></tr>
+  <tr><td><strong>I would like the forcast starting:</strong></td><td> <%= date_field_tag :forcastDate, params[:forcastDate], :value => forcastStart.strftime('%Y-%m-%d') %></td></tr>
+</table>
+<br>
+<%= submit_tag "Search" %>
+<br>
+
+<% end %>
+</div>
+
+<div class='panel panel-default'>
+  <br>
+  <p>
+  You are currently in <%= "#{usrLoc.name}. Your coordinates are lattitude #{usrLoc.lat} and longitude #{usrLoc.lng}. Here is the prediction based for the next five days starting on #{forcastStart.strftime('%B, %d %Y')}" %> <br>
+  <div class='centerstuff'>
+  <%= content_tag :iframe, "NO FRAMES", src: Location.getMapURI(usrLoc.lat, usrLoc.lng, 15), id: "mapFrame" %>
+  </div>
+  </p>
+</div>
+</div> <!-- end form column-->
+
+</div> <!--end row -->
 
 
+
+<!-- 
 
 <p>
 
-<%= form_tag(locations_path, method: :get) do %>
-<table>
-  <tr><td>I am in:</td><td><%= text_field_tag :usrLoc, params[:usrLoc], :value => usrLoc.name %></td></tr>
-  <tr><td>I would like the forcast starting:</td><td><%= date_field_tag :forcastDate, params[:forcastDate], :value => forcastStart.strftime('%Y-%m-%d') %></td></tr>
-</table>
-<%= submit_tag "Search" %>
-<% end %>
 
 
 
 
-  <p>
-  You are in <%= "#{usrLoc.name}. Your coordinates are lattitude #{usrLoc.lat} and longitude #{usrLoc.lng}. Here is the prediction based for the next five days starting on #{forcastStart.strftime('%B, %d %Y')}" %> <br>
-  <%= content_tag :iframe, "NO FRAMES", src: Location.getMapURI(usrLoc.lat, usrLoc.lng, 15), id: "mapFrame" %>
 
-  </p>
+
 
 
 
@@ -142,3 +169,6 @@
 
 
 
+ -->
+
+ </div>
