--- a/Weatherbet/app/views/predictions/new.html.erb
+++ b/Weatherbet/app/views/predictions/new.html.erb
@@ -1,5 +1,24 @@
-<h1>New Prediction</h1>
+<div style='background: rgb(255,223,189); min-height:1500px;'>
+<br>
+<div class='row'>
+<div class='col-s-3 col-md-3 col-lg-3'>
+</div>
 
+<div class='col-s-6 col-md-6 col-lg-6'>
+<div class='panel panel-default'>
+<div class='panel-heading'>
+<h1 style='text-align:center'>New Prediction</h1>
+</div>
+<div class='panel-body'>
+<div style='text-align:center'>
 <%= render 'form', prediction: @prediction %>
 
-<%= link_to 'Back', predictions_path %>
+
+</div>
+</div>
+</div>
+</div>
+
+<div class='col-s-3 col-md-3 col-lg-3'>
+</div>
+</div>
