fomatting and charts

--- a/Weatherbet/app/views/users/show.html.erb
+++ b/Weatherbet/app/views/users/show.html.erb
@@ -112,5 +112,8 @@
 </div> 
 </div>
 
-<%= timeline predictionTimeline %>
-<%= timeline reportTimeline %>
+Predictions:<br>
+<%= timeline predictionTimeline, height: "320px" %>
+
+Reports:<br>
+<%= timeline reportTimeline, height: "320px" %>
