--- a/Weatherbet/app/views/layouts/application.html.erb
+++ b/Weatherbet/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
 		      	
 		      	<li>
 		      		<!-- <a href='#forums'>forums</a> -->
-		      		<%= link_to "forums", pages_forums_path %>
+		      		<%= link_to "About", pages_forums_path %>
 		      	</li>
 
 		        <% if user_signed_in? %>
