--- a/Weatherbet/app/views/pages/forums.html.erb
+++ b/Weatherbet/app/views/pages/forums.html.erb
@@ -1,2 +1,25 @@
-<h1>Pages#forums</h1>
-<p>Find me in app/views/pages/forums.html.erb</p>
+<div style='min-height: 1500px; background:rgb(255,183,231)'>
+<div class='row'>
+
+<div class='col-s-2 col-md-2 col-lg-2'>
+</div>
+
+<div class='col-s-8 col-md-8 col-lg-8'>
+<div class='panel panel-default'>
+<div class='panel-heading'>
+<h1 style='text-align:center'> About </h1>
+</div>
+<div class='panel-body'>
+<p> <strong> Locations: </strong> Find and view weather statuses at your desired locations! There is a slew of information available for your every need, from wind speeds and direction to even the closest airport. We truly are commited to taking planning out of your experience! </p>
+<p> <strong> Vote: </strong> Once you have seen the conditions at your desired location, let us (and others) know if the location is viable for said activity! </p>
+<p> <strong> Learn: </strong> Unsure/lacking experience in determining whether or not your location is viable for your desired activity? Don't worry! Read up on what other users recommend (or warn against)!
+<p> <strong> Report: </strong> Help the community learn, and grow by reporting on whether or not the posted predictions were accurate! Let's all work towards a better experience, together. </p>
+</div>
+</div>
+</div>
+
+<div class='col-s-2 col-md-2 col-lg-2'>
+</div>
+
+</div> <!-- end row -->
+</div>
